new list view to display degrees on educational process objects

--- a/themes/wilma/i18n/all.properties
+++ b/themes/wilma/i18n/all.properties
@@ -490,6 +490,7 @@ org_type_capitalized = Organization Type
 educational_training_type = Type of Educational Training
 dept_or_school_name = Department or School Name within the
 degree = Degree
+missing_degree = missing degree
 major_field = Major Field of Degree
 supplemental_information = Supplemental Information
 supplemental_information_hint = (e.g., Thesis title, Transfer info, etc.)
