--- a/languages/es_GO/themes/wilma/i18n/all_es_GO.properties
+++ b/languages/es_GO/themes/wilma/i18n/all_es_GO.properties
@@ -484,6 +484,7 @@ org_type_capitalized = Tipo de Organización
 educational_training_type = Tipo de Formación Educativa
 dept_or_school_name = Departamento o Nombre de la escuela en el
 degree = Grado
+missing_degree = falta de grado
 major_field = Importante sobre el terreno de Grado
 supplemental_information = Información Complementaria
 supplemental_information_hint = (Por ejemplo, título de la tesis, la información de transferencia, etc)
