VIVO-743: custom form to add a person to a project

--- a/themes/wilma/i18n/all.properties
+++ b/themes/wilma/i18n/all.properties
@@ -884,3 +884,4 @@ missing_credential = missing credential
 grant_administered_by = grant being administered by
 missing_grant = missing grant
 editor_of_entry = editor of entry for
+researcher_role = Researcher's role in the project
