--- a/languages/es_GO/themes/wilma/i18n/all_es_GO.properties
+++ b/languages/es_GO/themes/wilma/i18n/all_es_GO.properties
@@ -878,3 +878,4 @@ missing_credential = falta credencial
 grant_administered_by = conceder administrado por
 missing_grant = falta de subvención
 editor_of_entry = editor de para
+researcher_role = El papel del investigador en el proyecto
