VIVO-743: new custom forms for adding participant to project andcontributor to grant/contract

--- a/languages/es_GO/themes/wilma/i18n/all_es_GO.properties
+++ b/languages/es_GO/themes/wilma/i18n/all_es_GO.properties
@@ -878,4 +878,6 @@ missing_credential = falta credencial
 grant_administered_by = conceder administrado por
 missing_grant = falta de subvención
 editor_of_entry = editor de para
-researcher_role = El papel del investigador en el proyecto
+role_type = Tipo de papel
+add_capitalized = Añadir
+researcher_role = El papel del investigador
