--- a/themes/wilma/i18n/all.properties
+++ b/themes/wilma/i18n/all.properties
@@ -884,4 +884,6 @@ missing_credential = missing credential
 grant_administered_by = grant being administered by
 missing_grant = missing grant
 editor_of_entry = editor of entry for
-researcher_role = Researcher's role in the project
+role_type = Role type
+add_capitalized = Add
+researcher_role = Researcher Role
