VIVO-584: add emphasis to word exclude

--- a/languages/es_GO/themes/wilma/i18n/all_es_GO.properties
+++ b/languages/es_GO/themes/wilma/i18n/all_es_GO.properties
@@ -419,13 +419,13 @@ problematic_section_error = Error: la sección problemático que el anterior deb
 new_local_ontology = nueva ontología locales
 
 manage_grants_and_projects = Gestione Becas y Proyectos para
-check_grants_to_exclude = Compruebe las subvenciones y proyectos que desea excluir de la página de perfil.
+check_grants_to_exclude = Compruebe las subvenciones y proyectos que desea <em>excluir</em> de la página de perfil.
 
 manage_affiliated_people = Gestione personas afiliadas
-check_people_to_exclude = Compruebe las personas que desea excluir de la página de perfil.
+check_people_to_exclude = Compruebe las personas que desea <em>excluir</em> de la página de perfil.
 
 manage_publications_for = Administrar publicaciones para
-check_pubs_to_exclude = Revise las publicaciones que desea excluir de la página de perfil.
+check_pubs_to_exclude = Revise las publicaciones que desea <em>excluir</em> de la página de perfil.
 
 manage_web_pages = Gestionar páginas Web
 has_no_webpages = Este individuo no tiene actualmente las páginas web específicas. Añadir una nueva página web haciendo clic en el botón de abajo.
