--- a/themes/wilma/i18n/all.properties
+++ b/themes/wilma/i18n/all.properties
@@ -425,13 +425,13 @@ problematic_section_error = Error: problematic section as above should all have 
 new_local_ontology = new local ontology
 
 manage_grants_and_projects = Manage Grants & Projects for
-check_grants_to_exclude = Check those grants and projects you want to exclude from the profile page.
+check_grants_to_exclude = Check those grants and projects you want to <em>exclude</em> from the profile page.
 
 manage_affiliated_people = Manage People Affiliated with
-check_people_to_exclude = Check those people you want to exclude from the profile page.
+check_people_to_exclude = Check those people you want to <em>exclude</em> from the profile page.
 
 manage_publications_for = Manage Publications for
-check_pubs_to_exclude = Check those publications you want to exclude from the profile page.
+check_pubs_to_exclude = Check those publications you want to <em>exclude</em> from the profile page.
 
 manage_web_pages = Manage Web Pages
 has_no_webpages = This individual currently has no web pages specified. Add a new web page by clicking on the button below.
