VIVO-816: provide clarification on concept management page

--- a/themes/wilma/i18n/all.properties
+++ b/themes/wilma/i18n/all.properties
@@ -278,9 +278,9 @@ manage_concepts = Manage Concepts
 no_concepts_specified = There are currently no concepts specified.
 return_to_profile = Return to Profile Page
 external_vocabulary_services = External Vocabulary Services
-create_own_concept = Create your own concept
+create_own_concept = Select or create a VIVO-defined concept.
 add_selected_concept = Add Selected Concept
-cannot_find_concept = Can't find the concept you want? Create your own.
+cannot_find_concept = Can't find the concept you want? Select or create a VIVO-defined concept.
 add_concept = Add Concept
 
 attendee_capitalized = Attendee
@@ -887,3 +887,4 @@ editor_of_entry = editor of entry for
 role_type = Role type
 add_capitalized = Add
 researcher_role = Researcher Role
+search_service_btn = Search Service
