--- a/languages/es_GO/themes/wilma/i18n/all_es_GO.properties
+++ b/languages/es_GO/themes/wilma/i18n/all_es_GO.properties
@@ -272,9 +272,9 @@ manage_concepts = Gestione Conceptos
 no_concepts_specified = Actualmente no hay conceptos especificados.
 return_to_profile = Volver a la página de perfil
 external_vocabulary_services = Servicios Vocabulario externos
-create_own_concept = Crea tu propio concepto
+create_own_concept = Selecciona o crea un VIVO concepto
 add_selected_concept = Añadir Concept Seleccionado
-cannot_find_concept = No se puede encontrar el concepto que desea? Crea tu propia cuenta.
+cannot_find_concept = No se puede encontrar el concepto que desea? Selecciona o crea un VIVO concepto.
 add_concept = Añadir Concept
 
 attendee_capitalized = Asistente
@@ -881,3 +881,4 @@ editor_of_entry = editor de para
 role_type = Tipo de papel
 add_capitalized = Añadir
 researcher_role = El papel del investigador
+search_service_btn = Búsqueda el servicio
