VIVO-920: made clarifications within gui so the dates associated with the visualizations made more sense.

--- a/themes/wilma/i18n/all.properties
+++ b/themes/wilma/i18n/all.properties
@@ -888,3 +888,4 @@ role_type = Role type
 add_capitalized = Add
 researcher_role = Researcher Role
 search_service_btn = Search Service
+through_today = through today's date
