--- a/languages/es_GO/themes/wilma/i18n/all_es_GO.properties
+++ b/languages/es_GO/themes/wilma/i18n/all_es_GO.properties
@@ -882,3 +882,4 @@ role_type = Tipo de papel
 add_capitalized = Añadir
 researcher_role = El papel del investigador
 search_service_btn = Búsqueda el servicio
+through_today = sobre la fecha de hoy
