fixed some translations

--- a/vivo-1.6/pt_BR/themes/wilma/i18n/all_pt_BR.properties
+++ b/vivo-1.6/pt_BR/themes/wilma/i18n/all_pt_BR.properties
@@ -33,13 +33,13 @@ indiv_foafperson_return = retorno à
 uri_icon = uri ícone
 
 intro_title = Bem-vindo ao VIVO
-intro_para1 = Vivo E UMA Ferramenta de Descobertas focada em Pesquisa, que permite a colaboração entre cientistas em todas as disciplinas.
-intro_para2 = Busca ou pesquisa de informaçÕes sobre pessoas, departamentos, cursos e muito mais.
+intro_para1 = Vivo é uma ferramenta de descobertas focada em pesquisa, que permite a colaboração entre cientistas em todas as disciplinas.
+intro_para2 = Busca ou pesquisa de informações sobre pessoas, departamentos, cursos e muito mais.
 intro_searchvivo = Buscar no VIVO
 intro_filtersearch = Filtrar busca
 
 #
-# "partial" individual templates ( /templates/freemarker/body/partials/individual ) 
+# "partial" individual templates ( /templates/freemarker/body/partials/individual )
 #
 contact_capitalized = Contato
 phone = telefone
@@ -261,13 +261,13 @@ grants_text_three = Isso criaria uma página que usaria about.ftl como o corpo. 
 #
 # lib templates ( /templates/freemarker/body/lib )
 #
-faculty_capitalized = Faculdade
-loading_faculty = Carregando faculdade. . .
-research_capitalized = Research
+faculty_capitalized = Corpo Docente
+loading_faculty = Carregando corpo docente. . .
+research_capitalized = Pesquisa
 view_all = Ver tudo ...
 view_all_research = visualizar todas as pesquisas
-no_research_content_found = No conteúdo encontrados.
-departments = departamentos
+no_research_content_found = Nenhum conteúdo encontrado.
+departments = Departamentos
 loading_map_information = Carregando as informações do mapa. . .
 verify_match_capitalized = Verificar esta combinação
 change_selection = seleção mudança
@@ -307,7 +307,7 @@ clinical_activity = atividade clínica
 clinical_activity_type = tipo de atividade clínica
 year_hint_format = AAAA
 
-collection_series_editor_role = série de regras da coleção ou editor  
+collection_series_editor_role = série de regras da coleção ou editor
 editor_role_in = papel regras em
 
 edit_wbpage_of = Editar página de
@@ -316,7 +316,7 @@ add_webpage = Adicionar Página Web
 url_type = Tipo de URL
 faculty_of_1000 = Faculdade de 1000 link
 standard_web_link = Padrão Web link
-webpage_name = Nome da Webpage 
+webpage_name = Nome da Webpage
 
 investigator_entry_for = entrada de investigador para
 investigator_capitalized = Investigator
@@ -462,7 +462,7 @@ selected_person = pessoa selecionada
 degree_candidacy = Grau de candidatura
 subject_area = Área Temática
 selected_subject_area = Área de Assunto Selecionado
-selected_advisee = Orientando Selecionado 
+selected_advisee = Orientando Selecionado
 selected_advisor =  Advisor Selecionado
 advisee_capitalized = orientando
 advisor_capitalized = orientador
@@ -512,7 +512,7 @@ postal_code = Código Postal
 posn_entry_for = posição entrada para
 
 #
-#  coauthorship templates ( /templates/freemarker/visualization/coauthorship ) 
+#  coauthorship templates ( /templates/freemarker/visualization/coauthorship )
 #
 within_last_10_years = dentro dos últimos 10 anos
 total = total de
@@ -526,7 +526,7 @@ unique_coauthors_per_year = Co-autores unico por ano
 count_capitalized = Conta
 
 #
-#  copi templates ( /templates/freemarker/visualization/copi ) 
+#  copi templates ( /templates/freemarker/visualization/copi )
 #
 year_capitalized = Ano
 unique_coinvestigators = Co-pesquisadores unico
@@ -536,7 +536,7 @@ unique_coinvestigators_per_year = Único co-pesquisadores por ano
 view_timeline_copi_network = Ver cronograma completo e rede de co-investigador.
 
 #
-#  entity comparison templates ( /templates/freemarker/visualization/entitycomparison ) 
+#  entity comparison templates ( /templates/freemarker/visualization/entitycomparison )
 #
 parent_organization_of = organização de origem de
 temporal_graph_drill_up = gráfico temporal
@@ -585,7 +585,7 @@ activity = atividade
 activities = atividades
 
 #
-#  grant visualization templates ( /templates/freemarker/visualization/grant ) 
+#  grant visualization templates ( /templates/freemarker/visualization/grant )
 #
 view_all_grants = visualizar todas as subvenções
 view_all_grants_text = Ver todas as subvenções Vivo e correspondente rede de co-investigador.
@@ -593,7 +593,7 @@ grant_per_year = Grants por ano
 link = link
 
 #
-#  map of science templates ( /templates/freemarker/visualization/mapOfScience ) 
+#  map of science templates ( /templates/freemarker/visualization/mapOfScience )
 #
 parent_entity = entidade-mãe
 map_of_science_icon = mapa de ícone ciência
@@ -610,14 +610,14 @@ please_visit = Por favor, visite o
 for_complete_overview = para uma visão completa.
 
 #
-#  model constructor templates ( /templates/freemarker/visualization/modelconstructor ) 
+#  model constructor templates ( /templates/freemarker/visualization/modelconstructor )
 #
 cached_models_regenerated = Os seguintes modelos em cache será regenerado.
 uri_independent_model = URI Independent Modelo
 currently_no_constructed_models = modelos Atualmente não há são construídos para uso através da visualização.
 
 #
-#  person level templates ( /templates/freemarker/visualization/personlevel) 
+#  person level templates ( /templates/freemarker/visualization/personlevel)
 #
 loading_data = carregamento de dados
 co_investigator_icon icon = co-investigador
@@ -655,7 +655,7 @@ grant_info_for_all_years = As informações nas tabelas a seguir é para todos o
 grant_sparkline_note = As linhas de ignição mostrados acima refletem bolsas do último ano civil completo. Estas tabelas mostram, contudo, a informação de subvenção para todos os anos, com base na informação carregada no sistema VIVO.
 
 #
-#  publication templates ( /templates/freemarker/visualization/publication) 
+#  publication templates ( /templates/freemarker/visualization/publication)
 #
 numbers_based_on_publications_in_vivo = Estes números baseiam-se exclusivamente sobre as publicações que foram carregados para este aplicativo VIVO. Se este for o seu perfil, você pode entrar publicações adicionais abaixo.
 last_ten_full_years = nos últimos 10 anos completos
@@ -665,7 +665,7 @@ download_link = link para download
 years = anos
 
 #
-#  miscellaneous visualization templates ( /templates/freemarker/visualization) 
+#  miscellaneous visualization templates ( /templates/freemarker/visualization)
 #
 visualization_tools = Ferramentas de Visualização
 refresh_cached_vis_models = refresh Models em cache para Visualization
@@ -677,7 +677,7 @@ vis_tools_note_three = No momento, estamos cache esses modelos na memória. O ca
 vis_tools_note_four = Os modelos são atualizadas a cada vez que o servidor for reiniciado. Uma vez que este não é geralmente prático sobre instâncias de produção, os administradores podem passar a usar o link "cache refresh" acima de fazer isso sem uma reinicialização.
 
 #
-#  custom form javascript variables ( /templates/freemarker/edit/js) 
+#  custom form javascript variables ( /templates/freemarker/edit/js)
 #
 drag_drop_reorder_authors = Arrastar e soltar para reordenar autores
 reordering_authors_failed = Reordenamento dos autores falhou.
@@ -719,7 +719,7 @@ confirm_webpage_deletion = Tem certeza de que deseja remover esta página web?
 error_removing_webpage pedido = Erro ao processar: página web não foi removido.
 
 #
-#  miscellaneous javascript variables ( productMods/js) 
+#  miscellaneous javascript variables ( productMods/js)
 #
 researcher = pesquisador
 researchers = pesquisadores
@@ -733,12 +733,12 @@ statewide_locations = locais em todo o estado.
 researchers_in = pesquisadores em
 
 no_faculty_found = Nenhum membro do corpo docente encontrado.
-placeholder_image = imagem espaço reservado
+placeholder_image = imagem padrão
 view_all_departments = ver todos os departamentos acadêmicos
-no_departments_found = Nenhum departamentos acadêmicos encontrados.
+no_departments_found = Nenhum departamento acadêmico encontrado.
 
 #
-#  individual javascript variables ( productMods/js/individual) 
+#  individual javascript variables ( productMods/js/individual)
 #
 error_processing_type_change = solicitação de processamento de erro: os rótulos não verificadas não pôde ser excluído.
 
@@ -746,14 +746,14 @@ display_more_ellipsis = ... mais
 show_more_content = mostrar mais conteúdo
 
 #
-#  visualization javascript variables ( productMods/js/visualization) 
+#  visualization javascript variables ( productMods/js/visualization)
 #
 publications_with = Publicações com
 
 co_inestigators_capitalized = co-pesquisadores
 grants_with = Grants com
 
-vis_first_link = First
+vis_first_link = Primeiro
 vis_last_link = Último
 vis_previous_link = Anterior
 vis_next_link = Próxima
@@ -813,7 +813,7 @@ publication_pubs = Publicações (pubs.)
 percent_activity =% de actividade
 
 #
-#  miscellaneous additions 
+#  miscellaneous additions
 #
 
 limit_search = busca limite
