VIVO-1000: fixed all.properties gaffe

--- a/themes/wilma/i18n/all.properties
+++ b/themes/wilma/i18n/all.properties
@@ -883,4 +883,4 @@ role_type = Role type
 add_capitalized = Add
 researcher_role = Researcher Role
 search_service_btn = Search Service
-through_today = through today's date
+through_today = publications through today's date
