No Jira issue. Minor language change

--- a/themes/wilma/i18n/all.properties
+++ b/themes/wilma/i18n/all.properties
@@ -628,8 +628,8 @@ profile_capitalized = Profile
 vivo_profile = VIVO profile
 publication_s_capitalized = Publication(s)
 co_author_s_capitalized = Co-author(s)
-first_publication = First Publication
-last_publication = Last Publication
+first_publication = First publication
+last_publication = Last publication
 incomplete_data_note1 = Note: This information is based solely on publications that have been loaded into the VIVO system. This may only be a small sample of the person's total work.
 incomplete_data_note2 = Go to your profile page to enter additional details about your publications.
 incomplete_data_note3 = Log in to enter additional details about your publications on your profile page.
@@ -883,4 +883,4 @@ role_type = Role type
 add_capitalized = Add
 researcher_role = Researcher Role
 search_service_btn = Search Service
-through_today = publications through today's date
+through_today = Publications through today's date
