VIVO-1039: the DOI property will now be a link that accesses the document.

--- a/languages/es_GO/themes/wilma/i18n/all_es_GO.properties
+++ b/languages/es_GO/themes/wilma/i18n/all_es_GO.properties
@@ -879,3 +879,4 @@ add_capitalized = Añadir
 researcher_role = El papel del investigador
 search_service_btn = Búsqueda el servicio
 through_today = publicaciones sobre la fecha de hoy
+doi_link=Digital Object Identifier (DOI)
