--- a/themes/wilma/i18n/all.properties
+++ b/themes/wilma/i18n/all.properties
@@ -884,3 +884,4 @@ add_capitalized = Add
 researcher_role = Researcher Role
 search_service_btn = Search Service
 through_today = Publications through today's date
+doi_link=Digital Object Identifier (DOI)
