Fix typo on intro_para2

--- a/themes/wilma/i18n/all.properties
+++ b/themes/wilma/i18n/all.properties
@@ -33,7 +33,7 @@ uri_icon = uri icon
 
 intro_title = Welcome to VIVO
 intro_para1 = VIVO is a research-focused discovery tool that enables collaboration among scientists across all disciplines.
-intro_para2 = Browse or search information on people, departments, courses, grants, and grants.
+intro_para2 = Browse or search information on people, departments, courses, grants, and publications.
 intro_searchvivo = Search VIVO
 intro_filtersearch = Filter search
 
