--- a/themes/wilma/i18n/all.properties
+++ b/themes/wilma/i18n/all.properties
@@ -885,3 +885,5 @@ researcher_role = Researcher Role
 search_service_btn = Search Service
 through_today = Publications through today's date
 doi_link=Digital Object Identifier (DOI)
+
+using_cache_time=Using information cached at
