replace incorrect label on entity comparison page

--- a/legacy/languages/es_GO/themes/wilma/i18n/all_es_GO.properties
+++ b/legacy/languages/es_GO/themes/wilma/i18n/all_es_GO.properties
@@ -589,7 +589,6 @@ link = enlace
 #
 parent_entity = entidad matriz
 map_of_science_icon = mapa de icono de la ciencia
-entity_label = etiqueta de entidad
 explore_activity = Explora actividad
 explore_capitalized = Explorar
 across_subdisciplines = en 554 subdisciplinas científicas
@@ -767,6 +766,7 @@ in_current_incomplete_year = en el año en curso incompleto (no trazada anterior
 publication_count = Conde de publicación
 grant_count = Conde subvención
 entity_type = Del tipo de entidad
+entity_label = Etiqueta de entidad
 no_matching_entities_found = No hay entidades que coincidan encontrados
 clear_search_query = claro consulta de búsqueda
 short_max_entity_note = Un máximo de 10 entidades se pueden comparar.
