--- a/webapp/src/main/webapp/themes/wilma/i18n/all.properties
+++ b/webapp/src/main/webapp/themes/wilma/i18n/all.properties
@@ -595,7 +595,6 @@ link = link
 #
 parent_entity = parent entity
 map_of_science_icon = map of science icon
-entity_label = entity label
 explore_activity = Explore activity
 explore_capitalized = Explore
 across_subdisciplines = across 554 scientific subdisciplines
@@ -772,6 +771,7 @@ in_current_incomplete_year = in the current incomplete year (not charted above)
 publication_count = Publication Count
 grant_count = Grant Count
 entity_type = Entity Type
+entity_label = Entity Label
 no_matching_entities_found = No matching entities found
 clear_search_query = clear search query
 short_max_entity_note = A Maximum of 10 entities can be compared.
