Update Tenderfoot with latest Wilma text

--- a/webapp/src/main/webapp/themes/tenderfoot/i18n/all.properties
+++ b/webapp/src/main/webapp/themes/tenderfoot/i18n/all.properties
@@ -33,12 +33,12 @@ uri_icon = uri icon
 
 intro_title = Welcome to VIVO
 intro_para1 = VIVO is a research-focused discovery tool that enables collaboration among scientists across all disciplines.
-intro_para2 = Browse or search information on people, departments, courses, grants, and grants.
+intro_para2 = Browse or search information on people, departments, courses, grants, and publications.
 intro_searchvivo = Search VIVO
 intro_filtersearch = Filter search
 
 #
-# "partial" individual templates ( /templates/freemarker/body/partials/individual ) 
+# "partial" individual templates ( /templates/freemarker/body/partials/individual )
 #
 contact_capitalized = Contact
 phone = phone
@@ -74,7 +74,6 @@ affiliated_departments = Associated Departments
 research_area = individuals in the department with this research area
 organization = individuals with the research area in this organization
 display_more = more
-display_less = less
 
 share_the_uri = share the uri
 
@@ -170,7 +169,7 @@ link_text = link text
 link_name = link name
 no_url_provided = no url provided for link
 
-# 
+#
 # individual templates ( /templates/freemarker/body/individual )
 #
 standard_view = Standard profile view
@@ -178,11 +177,10 @@ quick_view = Quick profile view
 quick_view_icon = quick view icon
 geographic_focus = Geographic Focus
 
-for = for
 background_top_image = background top image
 full_view_icon = full view icon
 profile_type = Profile Type
-# 
+#
 # body templates ( /templates/freemarker/body/ )
 #
 export_qr_code = Export QR code
@@ -192,12 +190,12 @@ view_this_profile = View this person's profile
 vcard = Vcard
 hyperlink = Hyperlink
 
-# 
+#
 # accounts templates ( /templates/freemarker/body/accounts )
 #
 password = password
 
-# 
+#
 # harvester templates ( /templates/freemarker/body/harvester )
 #
 must_be_admin = You must be an administrator to use this tool.
@@ -244,7 +242,7 @@ progress_capitalized = Progress
 undefined_runtime_property = property in runtime.properties is undefined.
 define_value_for_property = In order to use this feature, please define a value for this property that points to the Harvester installation directory before redeploying and restarting the application.
 
-# 
+#
 # menupage templates ( /templates/freemarker/body/menupage )
 #
 grants_text_one = This body is from the the template file \
@@ -257,7 +255,7 @@ grants_two = This technique could be used to define pages without menu items, th
 grants_text_three = This would create a page that would use about.ftl as the body.  The page would be \
                 accessed via /about and would override all servlet mappings in web.xml.
 
-# 
+#
 # lib templates ( /templates/freemarker/body/lib )
 #
 faculty_capitalized = Faculty
@@ -272,7 +270,7 @@ verify_match_capitalized = Verify this match
 change_selection = change selection
 
 #
-# custom form templates ( /templates/freemarker/edit/forms ) 
+# custom form templates ( /templates/freemarker/edit/forms )
 #
 manage_concepts = Manage Concepts
 no_concepts_specified = There are currently no concepts specified.
@@ -512,7 +510,7 @@ postal_code = Postal Code
 posn_entry_for = position entry for
 
 #
-#  coauthorship templates ( /templates/freemarker/visualization/coauthorship ) 
+#  coauthorship templates ( /templates/freemarker/visualization/coauthorship )
 #
 within_last_10_years = within the last 10 years
 total = total
@@ -526,7 +524,7 @@ unique_coauthors_per_year = Unique Co-Authors per year
 count_capitalized = Count
 
 #
-#  copi templates ( /templates/freemarker/visualization/copi ) 
+#  copi templates ( /templates/freemarker/visualization/copi )
 #
 year_capitalized = Year
 unique_coinvestigators = Unique co-investigators
@@ -536,7 +534,7 @@ unique_coinvestigators_per_year = Unique Co-Investigators per year
 view_timeline_copi_network = View full timeline and co-investigator network.
 
 #
-#  entity comparison templates ( /templates/freemarker/visualization/entitycomparison ) 
+#  entity comparison templates ( /templates/freemarker/visualization/entitycomparison )
 #
 parent_organization_of = Parent organization of
 temporal_graph_drill_up = temporal graph drill up
@@ -585,7 +583,7 @@ activity = activity
 activities = activities
 
 #
-#  grant visualization templates ( /templates/freemarker/visualization/grant ) 
+#  grant visualization templates ( /templates/freemarker/visualization/grant )
 #
 view_all_grants = view all grants
 view_all_grants_text = View all VIVO grants and corresponding co-investigator network.
@@ -593,11 +591,10 @@ grant_per_year = Grants per year
 link = link
 
 #
-#  map of science templates ( /templates/freemarker/visualization/mapOfScience ) 
+#  map of science templates ( /templates/freemarker/visualization/mapOfScience )
 #
 parent_entity = parent entity
 map_of_science_icon = map of science icon
-entity_label = entity label
 explore_activity = Explore activity
 explore_capitalized = Explore
 across_subdisciplines = across 554 scientific subdisciplines
@@ -610,14 +607,14 @@ please_visit = Please visit the
 for_complete_overview = for a complete overview.
 
 #
-#  model constructor templates ( /templates/freemarker/visualization/modelconstructor ) 
+#  model constructor templates ( /templates/freemarker/visualization/modelconstructor )
 #
 cached_models_regenerated = The following cached models will be regenerated.
 uri_independent_model = URI Independent Model
 currently_no_constructed_models = Currently there are no constructed models for use by visualization.
 
 #
-#  person level templates ( /templates/freemarker/visualization/personlevel) 
+#  person level templates ( /templates/freemarker/visualization/personlevel)
 #
 loading_data = loading data
 co_investigator_icon = co-investigator icon
@@ -630,8 +627,8 @@ profile_capitalized = Profile
 vivo_profile = VIVO profile
 publication_s_capitalized = Publication(s)
 co_author_s_capitalized = Co-author(s)
-first_publication = First Publication
-last_publication = Last Publication
+first_publication = First publication
+last_publication = Last publication
 incomplete_data_note1 = Note: This information is based solely on publications that have been loaded into the VIVO system. This may only be a small sample of the person's total work.
 incomplete_data_note2 = Go to your profile page to enter additional details about your publications.
 incomplete_data_note3 = Log in to enter additional details about your publications on your profile page.
@@ -655,7 +652,7 @@ grant_info_for_all_years = The information in the following tables is for all ye
 grant_sparkline_note = The spark lines shown above reflect grants through the last complete calendar year. These tables, however, show the grant information for all years, based on the information loaded in the VIVO system.
 
 #
-#  publication templates ( /templates/freemarker/visualization/publication) 
+#  publication templates ( /templates/freemarker/visualization/publication)
 #
 numbers_based_on_publications_in_vivo = These numbers are based solely on publications that have been loaded into this VIVO application. If this is your profile, you can enter additional publications below.
 last_ten_full_years = in the last 10 full years
@@ -665,7 +662,7 @@ download_link = download link
 years = years
 
 #
-#  miscellaneous visualization templates ( /templates/freemarker/visualization) 
+#  miscellaneous visualization templates ( /templates/freemarker/visualization)
 #
 visualization_tools = Visualization Tools
 refresh_cached_vis_models = Refresh Cached Models for Visualization
@@ -677,7 +674,7 @@ vis_tools_note_three = We're currently caching these models in memory.  The cach
 vis_tools_note_four = The models are refreshed each time the server restarts.  Since this is not generally practical on production instances, administrators can instead use the "refresh cache" link above to do this without a restart.
 
 #
-#  custom form javascript variables ( /templates/freemarker/edit/js) 
+#  custom form javascript variables ( /templates/freemarker/edit/js)
 #
 drag_drop_reorder_authors = Drag and drop to reorder authors
 reordering_authors_failed = Reordering of authors failed.
@@ -719,7 +716,7 @@ confirm_webpage_deletion = Are you sure you want to remove this web page?
 error_removing_webpage = Error processing request: web page not removed.
 
 #
-#  miscellaneous javascript variables ( productMods/js) 
+#  miscellaneous javascript variables ( productMods/js)
 #
 researcher = researcher
 researchers = researchers
@@ -738,19 +735,16 @@ view_all_departments = view all academic departments
 no_departments_found = No academic departments found.
 
 #
-#  individual javascript variables ( productMods/js/individual) 
+#  individual javascript variables ( productMods/js/individual)
 #
 error_processing_type_change = Error processing request: the unchecked labels could not be deleted.
 
-display_more_ellipsis = ... more
-show_more_content = show more content
-
 #
-#  visualization javascript variables ( productMods/js/visualization) 
+#  visualization javascript variables ( productMods/js/visualization)
 #
 publications_with = Publications with
 
-co_inestigators_capitalized = Co-investigators
+co_investigators_capitalized = Co-investigators
 grants_with = Grants with
 
 vis_first_link = First
@@ -777,6 +771,7 @@ in_current_incomplete_year = in the current incomplete year (not charted above)
 publication_count = Publication Count
 grant_count = Grant Count
 entity_type = Entity Type
+entity_label = Entity Label
 no_matching_entities_found = No matching entities found
 clear_search_query = clear search query
 short_max_entity_note = A Maximum of 10 entities can be compared.
@@ -813,7 +808,7 @@ publication_pubs = publications (pubs.)
 percent_activity = % activity
 
 #
-#  miscellaneous additions 
+#  miscellaneous additions
 #
 
 limit_search = limit search
@@ -888,4 +883,7 @@ role_type = Role type
 add_capitalized = Add
 researcher_role = Researcher Role
 search_service_btn = Search Service
-through_today = through today's date
+through_today = Publications through today's date
+doi_link=Digital Object Identifier (DOI)
+
+using_cache_time=Using information cached at
